build-final-final.log
   Compiling think-ai-utils v0.1.0 (/home/champi/Dev/think_ai/think-ai-utils)
warning: field `config` is never read
  --> think-ai-qwen/src/client.rs:42:5
   |
41 | pub struct QwenClient {
   |            ---------- field in this struct
42 |     config: QwenConfig,
   |     ^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `think-ai-qwen` (lib) generated 1 warning
   Compiling think-ai-image-gen v0.1.0 (/home/champi/Dev/think_ai/think-ai-image-gen)
error: expected identifier, found keyword `impl`
  --> think-ai-utils/src/perf.rs:20:1
   |
17 | pub struct PerfGuard {
   |            --------- while parsing this struct
...
20 | impl PerfGuard {
   | ^^^^ expected identifier, found keyword

error: this file contains an unclosed delimiter
   --> think-ai-image-gen/src/lib.rs:244:3
    |
36  | impl ImageGenConfig {
    |                     - unclosed delimiter
...
59  | pub struct ImageGenerator {
    |                           - unclosed delimiter
...
67  | pub struct GenerationMetadata {
    |                               - unclosed delimiter
...
75  | pub struct ImageGenerationRequest {
    |                                   - unclosed delimiter
...
82  | pub struct GeneratedImage {
    |                           - unclosed delimiter
...
86  | impl ImageGenerator {
    |                     - another 17 unclosed delimiters begin from here
...
227 |         let config = ImageGenConfig {
    |                                     - this delimiter might not be properly closed...
...
243 |     }
    |     - ...as it matches this but it has different indentation
244 | }
    |  ^

error: could not compile `think-ai-image-gen` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0308]: mismatched types
  --> think-ai-utils/src/perf.rs:14:21
   |
14 | pub fn get_ops() -> u64 {
   |        -------      ^^^ expected `u64`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression

For more information about this error, try `rustc --explain E0308`.
error: could not compile `think-ai-utils` (lib) due to 2 previous errors
